[package]
name = "set_slice"
version = "0.2.2"
authors = ["Ozaren <krishna.sd.2012@gmail.com>"]
repository = "https://github.com/KrishnaSannasi/published_crates/tree/master/set_slice"
description = "A macro for assigning values to slices"
keywords = ["slice", "assign", "set"]
categories = ["no-std", "embedded"]
license = "Apache-2.0"
license-file = "LICENSE.md"
readme = "README.md"

[dependencies]
