[package]
name = "set_slice"
version = "0.2.9-2"
authors = ["Ozaren <krishna.sd.2012@gmail.com>"]
repository = "https://github.com/KrishnaSannasi/published_crates/tree/master/set_slice"
description = "A macro for assigning values to slices"
keywords = ["slice", "assign", "set", "macro"]
categories = ["no-std", "development-tools::procedural-macro-helpers", "rust-patterns"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
